# AgenticRAG-with-Web-Search-and-Document-Search

./: README.md  app.py  pyproject.toml  requirements.txt
data/: spacex_overview.txt
faiss_index/: index.pkl
src/config/: config.py
src/document_ingestion/: document_processor.py
src/graph_builder/: graph_builder.py
src/node/: nodes.py  reactnode.py
src/state/: rag_state.py
src/vectorstore/: vectorstore.py
